--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5",
     "vite-plugin-handlebars": "^1.6.0"
+  },
+  "dependencies": {
+    "masonry-layout": "^4.2.2"
   }
 }
