--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite-plugin-handlebars": "^1.6.0"
   },
   "dependencies": {
-    "masonry-layout": "^4.2.2"
+    "masonry-layout": "^4.2.2",
+    "simplelightbox": "^2.14.1"
   }
 }
