--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite-plugin-handlebars": "^1.6.0"
   },
   "dependencies": {
+    "framer-motion": "^10.16.0",
     "masonry-layout": "^4.2.2"
   }
 }
