--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5",
-    "vite-plugin-handlebars": "^1.6.0"
+    "vite": "^4.4.5"
   },
   "dependencies": {
     "framer-motion": "^10.16.0",
